tests/snapshots/integration__main_fn__global_without_arg.snap
---
source: tests/main_fn.rs
expression: data
---
RUN
prog abc

# OUTPUT
command cat >&2 <<-'EOF' 
error: `prog` requires a subcommand but one was not provided
  [subcommands: cmd]
EOF
exit 1

# BUILD_OUTPUT
error: `prog` requires a subcommand but one was not provided
  [subcommands: cmd]


