tests/snapshots/integration__main_fn__nested_subcmd_no_main.snap
---
source: tests/main_fn.rs
expression: data
---
RUN
prog cmd

# OUTPUT
command cat >&2 <<-'EOF' 
USAGE: prog cmd <COMMAND>

COMMANDS:
  foo

EOF
exit 0

# BUILD_OUTPUT
USAGE: prog cmd <COMMAND>

COMMANDS:
  foo
