tests/snapshots/integration__main_fn__with_main2.snap
---
source: tests/main_fn.rs
expression: data
---
************ RUN ************
prog

# OUTPUT
argc__args=( prog )
argc__fn=main
argc__positionals=(  )
main

# RUN_OUTPUT
argc__args=([0]="prog")
argc__fn=main
argc__positionals=()
main

************ RUN ************
prog abc --foo 123

# OUTPUT
argc_foo=123
argc_val=abc
argc__args=( prog abc --foo 123 )
argc__fn=main
argc__positionals=( abc )
main abc

# RUN_OUTPUT
argc__args=([0]="prog" [1]="abc" [2]="--foo" [3]="123")
argc__fn=main
argc__positionals=([0]="abc")
argc_foo=123
argc_val=abc
main abc
